@@ -54,10 +54,10 @@ dependencies {
     testImplementation("com.sun.faces:jsf-impl:2.0.2")
     testImplementation("com.sun.faces.extensions:jsf-extensions-test-time:2.0")
 
-    testImplementation("org.ow2.asm:asm-commons:8.0.1")
-    testImplementation("org.ow2.asm:asm-tree:8.0.1")
-    testImplementation("org.ow2.asm:asm-analysis:8.0.1")
-    testImplementation("org.ow2.asm:asm-util:8.0.1")
+    testImplementation("org.ow2.asm:asm-commons:$asmVersion")
+    testImplementation("org.ow2.asm:asm-tree:$asmVersion")
+    testImplementation("org.ow2.asm:asm-analysis:$asmVersion")
+    testImplementation("org.ow2.asm:asm-util:$asmVersion")
 
     // javaassist is used by hibernate
     testImplementation("javassist:javassist:3.3")
@@ -108,8 +108,10 @@ test {
     forkEvery = 1
     maxParallelForks = Runtime.runtime.availableProcessors()
     //testLogging.showStandardStreams = true
-
-    if (project.hasProperty("test15")) {
+    if (project.hasProperty("test16")) {
+        executable = jdk16 + '/bin/java'
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.net=ALL-UNNAMED'
+    } else if (project.hasProperty("test15")) {
         executable = jdk15 + '/bin/java'
     } else if (project.hasProperty("test14")) {
         executable = jdk14 + '/bin/java'
